2022-12-07T16:19:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3640744383 # 682
* notice: last 14d: unq all: 3 9
* notice: prev accum: outdated-unq outdated-all / unq all: 261 474 / 266 482
* notice: next accum: outdated-unq outdated-all / unq all: 262 476 / 267 485
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2022-11-23] / [2022-12-07]

2022-12-07T01:09:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3634904086 # 680
* notice: last 14d: unq all: 2 8
* notice: prev accum: outdated-unq outdated-all / unq all: 260 472 / 266 482
* notice: next accum: outdated-unq outdated-all / unq all: 261 474 / 266 482
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [2022-11-22] / [2022-11-23]

2022-12-06T08:17:41Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3627721120 # 678
* notice: last 14d: unq all: 2 10
* notice: prev accum: outdated-unq outdated-all / unq all: 260 472 / 266 483
* notice: next accum: outdated-unq outdated-all / unq all: 260 472 / 266 482
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [] / [2022-11-22]

2022-12-06T01:06:55Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3625463884 # 677
* notice: last 14d: unq all: 2 11
* notice: prev accum: outdated-unq outdated-all / unq all: 259 470 / 266 482
* notice: next accum: outdated-unq outdated-all / unq all: 260 472 / 266 483
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-11-21] / []

2022-12-05T16:18:57Z: