@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-12-07T16:19:00Z",
+  "timestamp" : "2022-12-08T01:07:47Z",
   "count_outdated" : 476,
   "uniques_outdated" : 262,
-  "count" : 485,
-  "uniques" : 267,
+  "count" : 486,
+  "uniques" : 268,
   "clones" : [
     {
       "timestamp": "2022-11-24T00:00:00Z",
@@ -35,10 +35,10 @@
     },
     {
       "timestamp": "2022-12-07T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
